--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="row content-inner-3">
-                    <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="icon-bx-wraper content-info  m-b30 center">
                             <div class="icon-md gradient-two m-b30 m-t5">
                                 <a href="javascript:void(0)" class="icon-cell text-white">
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="icon-bx-wraper content-info m-b30 center">
                             <div class="icon-md gradient-four m-b30 m-t5">
                                 <a href="javascript:void(0)" class="icon-cell text-white">
@@ -86,25 +86,25 @@
                             <div class="icon-content">
                                 <h4 class="dlab-tilte m-b5">Office Location</h4>
                                 <p>802, Rajhans Otium,
-                                Above Trendsetter Shop,
+                                Above Trendsetter Shop,<br>
                                 Opposite Asha Parekh Hospital,
-                                SV Road,
-                                Santacruz West,
+                                SV Road,<br>
+                                Santacruz West,<br>
                                 Mumbai 400054.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 m-b30 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="contact-details">
-                            <!-- <h2 class="text-secondry">Quick Support?</h2>
-                            <div class="contact-user">
-                                <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=580&q=80" alt="">
-                                <h5>Mahfuz Riad</h5>
-                            </div> -->
-                            <p>Want to get instant support ? Type away below.Schedule a short introductory call </p>
-                            <span class="email-text">Contact: info@stellar-ai.in</span>
-                        </div>
-                    </div>
+<!--                    <div class="col-lg-4 col-md-6 col-sm-12 m-b30 wow fadeInUp" data-wow-delay="0.6s">-->
+<!--                        <div class="contact-details">-->
+<!--                            &lt;!&ndash; <h2 class="text-secondry">Quick Support?</h2>-->
+<!--                            <div class="contact-user">-->
+<!--                                <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=580&q=80" alt="">-->
+<!--                                <h5>Mahfuz Riad</h5>-->
+<!--                            </div> &ndash;&gt;-->
+<!--                            <p>Want to get instant support ? Type away below.Schedule a short introductory call </p>-->
+<!--                            <span class="email-text">Contact: info@stellar-ai.in</span>-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
