--- a/home/templates/home/social_base.html
+++ b/home/templates/home/social_base.html
@@ -83,7 +83,7 @@
                     {% url 'post:post' as path_post %}
                     {% url 'post:skeleton-post' as path_skeleton_post %}
                     {% url 'Competion:competionlist' as path_competition %}
-                    {% url 'home:plan' as path_plan %}
+                    {% url 'home:plan-list' as path_plan %}
                     {% url 'analytics:user-list' as path_analytics %}
                     <!-- <div class="navbar-item is-icon drop-trigger">
                         <a class="icon-link" href="javascript:void(0);">
