--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -164,12 +164,12 @@
 .plan-info > p.c-field{
   font-weight: 600;
   margin: .3rem 0;
-}
-.plan-info > p{
-  padding-left: 1rem;
+  padding: .6rem .6rem;
+  border-bottom: solid 1px #41414141;
 }
 .plan-info > p span {
   font-weight: 300;
+  font-size: 1.2rem;
 }
 .c-button:hover::before{
     left: 50%;
@@ -177,9 +177,9 @@
 }
 .plan-form{
   display: flex;
-  align-items: center; 
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
-  height: 100%;
 }
 </style>
 <section class="pricing-table">
@@ -235,10 +235,10 @@
             </div>
             <div id="plan-details-{{object.id}}" class="modal is-medium has-light-bg">
               <div class="modal-background"></div>
-              <div class="modal-content">
+              <div class="modal-content" style="max-width: 100vw; width: 460px;">
                   <div class="card p-3">
                       <div class="card-heading">
-                          <h3 style="font-size: 1.3rem;">Plan Details</h3>
+                          <h3 style="font-size: 1.5rem;">Plan Summary</h3>
                           <!-- Close X button -->
                           <div class="close-wrap">
                               <span class="close-modal">
@@ -248,65 +248,36 @@
                       </div>
                       <div class="card-body pb-4">
                           <div class="columns">
-
-                              <div class="column is-6 plan-info" style="overflow-y: auto;">
+                              <div class="column is-12 plan-info" style="overflow-y: auto; text-align: center;">
                                 <p class="c-field">
-                                  Type :&nbsp;
+                                  Type<br>
                                   <span>{{object.title}}</span>
                                 </p>
                                 <p class="c-field">
-                                  Cost :&nbsp;
+                                  Cost<br>
                                   <span>₹{{object.cost}}</span>
                                 </p>
                                 <p class="c-field">
-                                  Duration :&nbsp;
+                                  Duration<br>
                                   <span>{{object.duration}} days</span>
                                 </p>
                                 <p class="c-field">
-                                  Description :&nbsp;
-                                  <span>{{object.description}}</span>
-                                </p>
-                                {% if object.discount %}
-                                <p class="c-field">
-                                  Discount :&nbsp;
-                                  <span>{{object.discount}} days</span>
-                                </p>
-                                {% endif %}
-                                {% if object.features %}
-                                <p class="c-field mb-0">
-                                  Features :&nbsp;
-                                  {{object.features|safe}}
-                                </p>
-                                {% endif %}
-                                {% if object.group_create %}
-                                  <p class="c-field">
-                                    Group creation :&nbsp;
-                                    <span> &#10003; </span>
-                                  </p>
-                                {% endif %}
-                                {% if object.add_people %}
-                                <p class="c-field">
-                                  Adding people :&nbsp;
-                                  <span> &#10003; </span>
-                                </p>
-                                {% endif %}
-                                <p class="c-field">
-                                  Total groups allowed :&nbsp;
+                                  Total groups allowed<br>
                                   <span>{{object.total_group_create_size}} groups</span>
                                 </p>
                                 <p class="c-field">
-                                  Members per group :&nbsp;
+                                  Members per group<br>
                                   <span>{{object.group_size}} members</span>
                                 </p>
-                              </div>
 
-                              <div class="column is-6" style="background-color: #fff;">
                                 <form action="#" method="POST" class="plan-form">
                                   {% csrf_token %}
-                                  <p for="id_coupon_code" class="mt-3 mb-1 has-text-centered" style="font-size: 1.2rem; font-weight: 500;">
-                                    Enter coupon code<br>if any
-                                  </p>
-                                  <div class="control has-icon mt-5" style="width: 90%;">
+                                  <label class="mt-3 mb-4" style="font-weight: 500; justify-content:start;">
+                                    <input type="checkbox" style="vertical-align:middle;" onchange="toggleCoupon(event)">
+                                    &nbsp;
+                                    <span class="mb-1">I want to use a coupon.</span>
+                                  </label>
+                                  <div class="control has-icon mb-4" data-wrap="coupon-wrap" style="font-size: 1.3rem; width: 80%; text-align: center; display:none;">
                                     <input type="text" class="input" placeholder="Enter code" name="coupon_code">
                                     <div class="form-icon">
                                       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
@@ -314,11 +285,11 @@
                                   </div>
                                   <!-- <button type="submit" class="c-button button is-solid accent-button is-fullwidth mt-5 mb-1"></button> -->
                                   <a href="{% url 'order:payment-request' object.id %}"
-                                     class="c-button button is-solid accent-button is-fullwidth mt-5 mb-1">
+                                      class="c-button button is-solid accent-button is-fullwidth mt-2 py-4" style="width: 90%;">
                                     Proceed &#10142;
                                   </a>
                                 </form>
-                              </div>
+                            </div>
                           </div>
                       </div>
                   </div>
@@ -336,6 +307,16 @@
           anchorEl.href = `${link}?coupon_code=${code}`;
         })
       })
+      function toggleCoupon(event){
+        const wrapper = event.target.closest('.card')
+        if (event.target.checked){
+          wrapper.querySelector(`[data-wrap='coupon-wrap'`).style.display = 'block';
+        } else {
+          wrapper.querySelector(`[data-wrap='coupon-wrap'`).style.display = 'none';
+        }
+        wrapper.querySelector(`[name='coupon_code']`).value = '';
+        wrapper.querySelector(`[name='coupon_code']`).dispatchEvent(new Event('input'))
+      }
     </script>
 </section>
 {% endblock content %}
