--- a/users/templates/users/user_bookmarks.html
+++ b/users/templates/users/user_bookmarks.html
@@ -269,7 +269,7 @@ function createBookMarkPost(posts)
                 </div>
                 <div class="dropdown-menu" role="menu">
                     <div class="dropdown-content">
-                        <a onclick="BookMark('`+ post.post_id +`')" class="dropdown-item">
+                        <a onclick="BookMark('`+ post.post_id +`', '${post.type}')" class="dropdown-item">
                             <div class="media">
                                 <svg id="book-mark-`+ post.post_id +`" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="`+ post.bookmark +`" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bookmark">
                                                         <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z">
@@ -570,7 +570,7 @@ function createBookMarkPost(posts)
                 </div>
                 <div class="dropdown-menu" role="menu">
                     <div class="dropdown-content">
-                        <a onclick="BookMark('`+ post.post_id +`')" class="dropdown-item">
+                        <a onclick="BookMark('`+ post.post_id +`', '${post.type}')" class="dropdown-item">
                             <div class="media">
                                 <svg id="book-mark-`+ post.post_id +`" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="`+ post.bookmark +`" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bookmark">
                                                         <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z">
