--- a/users/templates/users/notification_permission.html
+++ b/users/templates/users/notification_permission.html
@@ -81,7 +81,8 @@
     };
 
     // Firebase web credentials public key
-    const applicationServerKey = 'BJMtWEit7IsPhW5FKfXpfdqHSx-h27vjv0Zd_y8w6rBj-Kmn3EPbBOOQKU1qDzePeYz-oS2rYQz8_VH2r9QWA6s';
+    // const applicationServerKey = 'BJMtWEit7IsPhW5FKfXpfdqHSx-h27vjv0Zd_y8w6rBj-Kmn3EPbBOOQKU1qDzePeYz-oS2rYQz8_VH2r9QWA6s';
+    const applicationServerKey = 'BB33Facuw46_JoeaHdkwSX2RzyOoCBytwPI8_gKN8_drwbCzmbr72g6JqGqU-FaLRYS0RrB-FhyOkgL0T52NpA8';
 
     // In your ready listener
     if ('serviceWorker' in navigator) {
