--- a/order/templates/order/payment_redirect.html
+++ b/order/templates/order/payment_redirect.html
@@ -4,7 +4,7 @@
         <title>Loading...</title>
     </head>
 
-    <body>
+    <body onload="document.payuForm.submit()">
 
     <form action="https://test.payu.in/_payment" method="post" name="payuForm">
             {% csrf_token %}
@@ -29,10 +29,10 @@
             <input type="hidden" name="state" value="{{ posted.state }}" /></td>
             <input type="hidden" name="country" value="{{ posted.country }}" /></td>
             <input type="hidden" name="zipcode" value="{{ posted.zipcode }}" /></td>
-<input type="hidden" name="surl" value="http://stellar-ai.in/order/payment/response/" />
-<input type="hidden" name="furl" value="http://stellar-ai.in/order/payment/response/" />
+<input type="hidden" name="surl" value="http://127.0.0.1:8000/order/payment/response/" />
+<input type="hidden" name="furl" value="http://127.0.0.1:8000/order/payment/response/" />
             <input type="hidden" name="udf1" value="{{ payment.id }}" /></td>
-{#            <input type="hidden" name="udf2" value="{{ posted.udf2 }}" /></td>#}
+            <input type="hidden" name="udf2" value="{{ request.user.id }}" /></td>
 {#            <input type="hidden" name="udf3" value="{{ posted.udf3 }}" /></td>#}
 {#            <input type="hidden" name="udf4" value="{{ posted.udf4 }}" /></td>#}
 {#            <input type="hidden" name="udf5" value="{{ posted.udf5 }}" /></td>#}
