payment integration updates v1

--- a/order/templates/order/payment_redirect.html
+++ b/order/templates/order/payment_redirect.html
@@ -33,14 +33,14 @@
 <input type="hidden" name="furl" value="https://stellar-ai.in/order/payment/response/" />
             <input type="hidden" name="udf1" value="{{ payment.id }}" /></td>
             <input type="hidden" name="udf2" value="{{ request.user.id }}" /></td>
-{#            <input type="hidden" name="udf3" value="{{ posted.udf3 }}" /></td>#}
+            <input type="hidden" name="udf3" value="{{ coupon_applied }}" /></td>
 {#            <input type="hidden" name="udf4" value="{{ posted.udf4 }}" /></td>#}
 {#            <input type="hidden" name="udf5" value="{{ posted.udf5 }}" /></td>#}
-        <h1>{{ hashh }}</h1>
-        <button type="submit">Submit</button>
+{#        <h1>{{ hashh }}</h1>#}
+{#        <button type="submit">Submit</button>#}
         </form>
 
-<h1>{{ posted }}</h1>
+{#<h1>{{ posted }}</h1>#}
     </body>
 
     </html>
