--- a/order/templates/order/payment_redirect.html
+++ b/order/templates/order/payment_redirect.html
@@ -1,15 +1,83 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>Payment Successfull</h1>
-    <form method="post" action="{% url 'order:payment-response' %}">
-        {% csrf_token %}
-        <input type="hidden" value="{{ payment_id }}" name="payment_id">
-        <button type="submit">Confirm</button>
-    </form>
-</body>
-</html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--    <h1>Payment Successfull</h1>-->
+<!--    <form method="post" action="{% url 'order:payment-response' %}">-->
+<!--        {% csrf_token %}-->
+<!--        <input type="hidden" value="{{ payment_id }}" name="payment_id">-->
+<!--        <button type="submit">Confirm</button>-->
+<!--    </form>-->
+<!--</body>-->
+<!--</html>-->
+
+
+<html>
+
+    <head>
+        <title>Loading...</title>
+    </head>
+
+    <body onload="document.payuForm.submit()">
+        <form action="{{ posted.action }}" method="post" name="payuForm">
+            {% csrf_token %}
+            <input type="hidden" name="key" value="{{posted.key}}" />
+            <input type="hidden" name="hash_string" value="{{ posted.hash_string }}" />
+            <input type="hidden" name="hash" value="{{ posted.hashh }}" />
+            <input type="hidden" name="posted" value="{{ posted }}" />
+            <input type="hidden" name="txnid" value="{{ posted.txnid }}" />
+            <input type="hidden" name="amount" value="{{ posted.amount|default:'10' }}" /></td>
+            <input type="hidden" name="firstname" id="firstname" value="{{ posted.firstname|default:'' }}" /></td>
+            <input type="hidden" name="email" id="email" value="{{ posted.email|default:'' }}" /></td>
+            <input type="hidden" name="phone" value="{{ posted.phone|default:'' }}" /></td>
+            <textarea type="hidden" name="productinfo" style="display:none;">{{ posted.productinfo|default:'' }}</textarea>
+            </td>
+            <input type="hidden" name="surl" value="{{ posted.surl }}" size="64" /></td>
+            <input type="hidden" name="furl" value="{{ posted.furl }}" size="64" /></td>
+<!--            <input type="hidden" name="service_provider" value="{{posted.service_provider}}" size="64" />-->
+            <input type="hidden" name="lastname" id="lastname" value="{{ posted.lastname }}" /></td>
+            <input type="hidden" name="address1" value="{{ posted.address1 }}" /></td>
+            <input type="hidden" name="address2" value="{{ posted.address2 }}" /></td>
+            <input type="hidden" name="city" value="{{ posted.city }}" /></td>
+            <input type="hidden" name="state" value="{{ posted.state }}" /></td>
+            <input type="hidden" name="country" value="{{ posted.country }}" /></td>
+            <input type="hidden" name="zipcode" value="{{ posted.zipcode }}" /></td>
+            <input type="hidden" name="udf1" value="{{ posted.udf1 }}" /></td>
+            <input type="hidden" name="udf2" value="{{ posted.udf2 }}" /></td>
+            <input type="hidden" name="udf3" value="{{ posted.udf3 }}" /></td>
+            <input type="hidden" name="udf4" value="{{ posted.udf4 }}" /></td>
+            <input type="hidden" name="udf5" value="{{ posted.udf5 }}" /></td>
+        </form>
+    </body>
+
+    </html>
+
+
+<!--<html>-->
+
+<!--    <head>-->
+<!--        <title>Loading...</title>-->
+<!--    </head>-->
+
+<!--    <body>-->
+<!--<form action='https://test.payu.in/_payment' method='post'>-->
+<!--<input type="hidden" name="key" value="gtKFFx" />-->
+<!--<input type="hidden" name="salt" value="eCwWELxi" />-->
+<!--<input type="hidden" name="txnid" value="t6svtqtjRdl854" />-->
+<!--<input type="hidden" name="productinfo" value="iPhone" />-->
+<!--<input type="hidden" name="amount" value="10.00" />-->
+<!--<input type="hidden" name="email" value="test@gmail.com" />-->
+<!--<input type="hidden" name="firstname" value="Ashish" />-->
+<!--<input type="hidden" name="lastname" value="Kumar" />-->
+<!--<input type="hidden" name="surl" value="https://apiplayground-response.herokuapp.com/" />-->
+<!--<input type="hidden" name="furl" value="https://apiplayground-response.herokuapp.com/" />-->
+<!--<input type="hidden" name="phone" value="7412589658" />-->
+<!--<input type="hidden" name="hash" value="7617044015522df0948eec9c1a4972f6105a3634b752ceed3f07d428eae057560df3b0bb51c92424dd9b1addd9011927568714da152fdfa6b387c4cbe7a7c6ab" />-->
+<!--<input type="submit" value="submit"> </form>-->
+<!--</body>-->
+<!--</html>-->
+
+<!--    </html>-->
