--- a/order/templates/order/payment_redirect.html
+++ b/order/templates/order/payment_redirect.html
@@ -29,8 +29,8 @@
             <input type="hidden" name="state" value="{{ posted.state }}" /></td>
             <input type="hidden" name="country" value="{{ posted.country }}" /></td>
             <input type="hidden" name="zipcode" value="{{ posted.zipcode }}" /></td>
-<input type="hidden" name="surl" value="http://127.0.0.1:8000/order/payment/response/" />
-<input type="hidden" name="furl" value="http://127.0.0.1:8000/order/payment/response/" />
+<input type="hidden" name="surl" value="http://stellar-ai.in/order/payment/response/" />
+<input type="hidden" name="furl" value="http://stellar-ai.in/order/payment/response/" />
             <input type="hidden" name="udf1" value="{{ payment.id }}" /></td>
             <input type="hidden" name="udf2" value="{{ request.user.id }}" /></td>
             <input type="hidden" name="udf3" value="{{ coupon_applied }}" /></td>
