--- a/analytics/templates/analytics/ad_list.html
+++ b/analytics/templates/analytics/ad_list.html
@@ -45,7 +45,7 @@
               <table class="table is-fullwidth">
                 <thead>
                 <tr>
-                  <th>Image</th>
+<!--                  <th>Image</th>-->
                   <th>Link</th>
                   <!-- <th>Description</th> -->
                   <th class="has-text-centered">Update</th>
@@ -63,11 +63,11 @@
                       <img src="https://avatars.dicebear.com/v2/initials/rebecca-bauch.svg" class="is-rounded">
                     </div>
                   </td> -->
-                  <td class="is-image-cell">
-                    <div class="image" style="max-height: 3rem; max-width: 3rem;">
-                      <img src="{{object.image.url}}" class="is-rounded">
-                    </div>
-                  </td>
+<!--                  <td class="">-->
+<!--                    <div class="" style="max-height: 3rem; max-width: 3rem;">-->
+<!--                      <img src="{{object.image.url}}" class="is-rounded">-->
+<!--                    </div>-->
+<!--                  </td>-->
                   <td data-label="link">{{object.link}}</td>
                   
                   <td class="has-text-centered" data-label="Mobile">
