--- a/users/templates/users/user_register.html
+++ b/users/templates/users/user_register.html
@@ -191,6 +191,7 @@
                                 <input type="email" id="email" class="input" name="email" required onblur="unlockNextBtn(event, this, 0, 'stepbtn0')" placeholder="Enter your email address">
                             </div>
                         </div>
+
                     </div>
 
                     <div class="buttons">
@@ -248,12 +249,12 @@
                                 <input type="password" name="password2" onblur="unlockNextBtn(event, this, 2, 'stepbtn2')" minlength="8"  class="input" placeholder="Repeat your password" required>
                             </div>
                         </div>
-                        <!-- <div class="field">
-                            <label>Phone Number</label>
-                            <div class="control">
-                                <input type="number" onblur="unlockNextBtn(event, this, 2, 'stepbtn2')"  class="input" name="phone_number" placeholder="Enter your phone number">
+                         <div class="field">
+<!--                            <label>Phone Number</label>-->
+                            <div class="control" style="font-size: 12px;">
+                                <input type="checkbox" style="height: 10px;margin: 0.5em;" required> I agree all <a href="{% url 'home:terms' 'privacy-policy' %}">privacy policy</a> and <a href="{% url 'home:terms' 'terms-and-condition' %}">terms and condition</a>.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
 
                     <div class="buttons">
