--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -7,12 +7,12 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="" />
+    <meta name="keywords" content="Stellar, Stellar Ai, Group Coding, Ai" />
     <meta name="author" content="" />
     <meta name="robots" content="" />
-    <meta name="description" content="Steller AI" />
+    <meta name="description" content="A website working on Artificial Intelligence algorithms and down the pike planning to model more Artificial Intelligent algorithms in its skeleton for the users." />
     <meta property="og:title" content="Steller AI" />
-    <meta property="og:description" content="Steller AI" />
+    <meta property="og:description" content="A website working on Artificial Intelligence algorithms and down the pike planning to model more Artificial Intelligent algorithms in its skeleton for the users." />
     <meta property="og:image" content="" />
     <meta name="format-detection" content="telephone=no">
 
@@ -252,7 +252,6 @@
                                 <h5 class="footer-title">Navigation</h5>
                                 <ul>
                                     <li><a href="{% url 'home:home' %}">Home</a></li>
-                                    <li><a href="{% url 'home:about' %}">About us</a></li>
                                     <li><a href="{% url 'home:contact' %}">Contact</a></li>
 <!--                                    <li><a href="{% url 'home:news-letter' %}">Newsletter</a></li>-->
                                 </ul>
