post,skeleton post login required and create coderoom button functionality

--- a/chat/templates/chat/tab_content_chats.html
+++ b/chat/templates/chat/tab_content_chats.html
@@ -38,7 +38,7 @@
 
                                     {% if request.user.is_plan_valid and allow_group_creation %}
                                     <div class="mb-5">
-                                        <a onclick="$(`.nav-link[data-bs-toggle=&quot;tab&quot;]`).click()" class="btn btn-sm btn-primary w-100 py-4" >Create CodeRoom</a>
+                                        <a  onclick="$('#tab-content-create-chat').addClass('active show');" class="btn btn-sm btn-primary w-100 py-4" >Create CodeRoom</a>
                                     </div>
                                     {% endif %}
 
