chat name for unique name fix

--- a/chat/templates/chat/group-chat-js.html
+++ b/chat/templates/chat/group-chat-js.html
@@ -8,7 +8,7 @@
 <script>
     let current_group;
 
-    function setGroup(groupName,user_img_url, img_url,groupId=null,groupInfo=null)
+    function setGroup(groupName,user_img_url, img_url,groupId=null,groupInfo=null, groupTitleName=null)
     {
         if($('#chat-panel-show-id').is(":hidden"))
             $('#chat-panel-show-id').show();
@@ -16,7 +16,7 @@
 
         $('#receiver_img_preview_id').prop("src",img_url);
         $('#sender_img_preview_id').prop("src",user_img_url);
-        $('#chatPanel-username').text(groupName);
+        $('#chatPanel-username').text(groupTitleName);
 
         {# Modal Body#}
         $('#receiver_group_image_url').prop("src", user_img_url);
