group title name

--- a/chat/templates/chat/group-chat-js.html
+++ b/chat/templates/chat/group-chat-js.html
@@ -20,7 +20,7 @@
 
         {# Modal Body#}
         $('#receiver_group_image_url').prop("src", user_img_url);
-        $('#receiver_group_name').text(groupName);
+        $('#receiver_group_name').text(groupTitleName);
         //('#receiver_group_description').text(description);
 
         // Group ID for adding members to a group
@@ -28,7 +28,7 @@
 
         {# Off Canvas #}
         $('#offcanvas_profile_img_url').prop("src", user_img_url);
-        $('#offcanvas_profile_fullname').text(groupName);
+        $('#offcanvas_profile_fullname').text(groupTitleName);
         $('#offcanvas_profile_username').text(groupInfo);
         $('#update_group_id').val(groupId);
         // $('#offcanvas-tab-profile-people').text('People');
