--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -6,9 +6,9 @@
 <!-- Content -->
 <div class="page-content">
     <!-- inner page banner -->
-    <div class="dlab-bnr-inr bg-custom" style="background-image:url('{% static 'images/background/bg1.jpg' %}');">
+    <div class="dlab-bnr-inr bg-custom" style="background-image:url('{% static 'images/background/bg1.jpg' %}');height: 300px;">
         <div class="container">
-            <div class="dlab-bnr-inr-entry text-white">
+            <div class="dlab-bnr-inr-entry text-white mb-0">
                 <h1>Contact Us</h1>
                 <p>Contact us for anything and we will reach out to you soon</p>
             </div>
